# moyuan-os

./: .editorconfig  .gdbinit  .gitattributes  .gitignore  CODE_STYLE.md  Cargo.toml  ENVIRONMENT.md  LICENSE  Makefile  README.md  aarch64-unknown-none.json  build_kernel.ps1  fix_cargo_files.sh  keyboard_test  riscv64gc-unknown-none-elf.json  run_tests.sh  run_uefi.sh  rust-toolchain.toml  x86_64-unknown-none.json  项目状态报告.md
.cargo/: config.toml
bootloader/grub/: grub.cfg
bootloader/uefi/: Cargo.toml
bootloader/uefi/src/: main.rs
iso/boot/: kernel
iso/boot/grub/: grub.cfg
kernel/arch/x86_64/boot/: boot.asm
kernel/arch/x86_64/exception/: handlers.rs  idt.rs
kernel/compatible_kernels/linux_compat/: Cargo.toml
kernel/compatible_kernels/linux_compat/src/: elf.rs  lib.rs  libc.rs  syscall.rs
kernel/compatible_kernels/posix_compat/: Cargo.toml
kernel/compatible_kernels/posix_compat/src/: lib.rs
kernel/compatible_kernels/rtos_compat/: Cargo.toml
kernel/core_microkernel/: Cargo.toml  build.rs  lib.long-type-14293161148973095758.txt  lib.rs  linker.ld  test.rs
kernel/core_microkernel/arch/x86_64/iommu/: mod.rs
kernel/core_microkernel/enclave/: core.rs  error.rs  hardware.rs  iommu.rs  memory.rs  mod.rs
kernel/core_microkernel/enclave/ipc/: channel.rs  encryption.rs  error.rs  memory_pool.rs  mod.rs  security.rs
kernel/core_microkernel/l10n/: charset.rs  locale.rs  messages.rs  mod.rs  timezone.rs
kernel/core_microkernel/memory/: mod.rs
kernel/core_microkernel/mm/virt/: address_space.rs  mod.rs
kernel/core_microkernel/net/: arp.rs  dhcp.rs  dns.rs  icmp.rs  ipv4.rs  ipv6.rs  mod.rs  tcp.rs  udp.rs
kernel/core_microkernel/src/: lib.rs  main.rs  pvh.S  pvh.asm  test.rs  test_main.rs
kernel/core_microkernel/src/console/: keyboard.rs  mod.rs  serial.rs  vga.rs
kernel/core_microkernel/src/interrupt/: mod.rs
kernel/core_microkernel/src/ipc/: mod.rs  pipe.rs  semaphore.rs  shared_memory.rs
kernel/core_microkernel/src/mm/: mod.rs
kernel/core_microkernel/src/mm/physical/: mod.rs  physical.rs
kernel/core_microkernel/src/mm/virt/: address_space.rs  mod.rs
kernel/core_microkernel/src/power/: acpi.rs  cpu.rs  device.rs  mod.rs
kernel/core_microkernel/src/security/: mod.rs
kernel/core_microkernel/src/security/file_perm/: mod.rs
kernel/core_microkernel/src/security/user_group/: mod.rs
kernel/core_microkernel/src/syscall/: mod.rs  syscall.rs
kernel/core_microkernel/src/task/: mod.rs
kernel/core_microkernel/src/task/process/: mod.rs  process.rs
kernel/core_microkernel/src/task/scheduler/: mod.rs  scheduler.rs
kernel/core_microkernel/syscall/: mod.rs  syscall.rs
kernel/core_microkernel/task/process/: process.rs
kernel/core_microkernel/task/scheduler/: mod.rs  scheduler.rs
kernel/core_microkernel/task/scheduler/enclave_scheduler/: context_switch.rs  core_binding.rs  enclave_queue.rs  lockfree_ringbuffer.rs  mod.rs  monitoring.rs
kernel/security/: mod.rs
kernel/security/file_perm/: mod.rs
kernel/security/user_group/: mod.rs
resources/images/terminal/: 终端背景_1024x768.raw  终端背景_800x600.raw
services/audio/: Cargo.toml
services/audio/src/: capture.rs  codec.rs  driver.rs  format.rs  lib.rs  mixer.rs  playback.rs  settings.rs
services/config_service/: Cargo.toml
services/container_service/: Cargo.toml
services/container_service/src/: cgroup.rs  container.rs  lib.rs  namespace.rs
services/device_service/: Cargo.toml
services/device_service/src/: devices.rs  lib.rs
services/fs_service/: Cargo.toml
services/fs_service/src/: lib.rs
services/fs_service/src/fs_impl/: mod.rs
services/fs_service/src/fs_impl/ramfs/: mod.rs
services/fs_service/src/vfs/: mod.rs
services/gui_service/: Cargo.toml
services/init/: Cargo.toml
services/init/src/: lib.rs  main.rs
services/input_method/: Cargo.toml
services/input_method/src/: candidates.rs  engine.rs  ime.rs  keyboard.rs  lib.rs  settings.rs
services/log_service/: Cargo.toml
services/network_service/: Cargo.toml
services/network_service/src/: config.rs  lib.rs
services/network_service/src/drivers/: e1000.rs  mod.rs  virtio_net.rs
services/network_service/src/link/: arp.rs  mod.rs
services/network_service/src/net_stack/: mod.rs
services/network_service/src/network/: icmp.rs  ipv4.rs  mod.rs
services/network_service/src/transport/: mod.rs  udp.rs
services/network_service/src/utils/: mod.rs
services/power_service/: Cargo.toml
services/power_service/src/: lib.rs
services/security_service/: Cargo.toml
services/shell_service/: Cargo.toml
services/shell_service/src/: lib.rs  main.rs
services/time_service/: Cargo.toml
userland/browser/: Cargo.toml
userland/browser/src/: core.rs  extensions.rs  javascript.rs  lib.rs  network.rs  renderer.rs  settings.rs  storage.rs  ui.rs
userland/libs/libc/: Cargo.toml
userland/libs/libc/src/: lib.rs
userland/shell/l10n/: messages.rs  mod.rs  translations.rs
