[package]
name = "moyuan-uefi-bootloader"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
uefi = "0.26.0"
uefi-services = "0.23.0"
log = "0.4.20"

[features]
default = ["uefi/default"]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

[target.x86_64-unknown-uefi]
linker = "rust-lld"


