[package]
name = "moyuan-core-microkernel"
version = "0.1.0-alpha.1"
edition = "2021"

[features]
default = []
test = []

[dependencies]
moyuan-device-service = { path = "../../services/device_service" }
moyuan-fs-service = { path = "../../services/fs_service" }
spin = "0.9.8"
bitflags = "2.4"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "none")'.dependencies]

[target.x86_64-unknown-none]
linker = "rust-lld"
rustflags = ["-C", "link-arg=-Tlinker.ld", "-C", "relocation-model=static"]

[profile.dev]
debug = true
opt-level = 0
panic = "abort"

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"

[[bin]]
name = "test_kernel"
path = "src/main.rs"
required-features = ["test"]
