[package]
name = "moyuan-container-service"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
spin = "0.9"

[target.'cfg(target_os = "none")'.dependencies]
# 无标准库依赖

[lib]
name = "moyuan_container_service"
crate-type = ["rlib"]
