[package]
name = "moyuan-input-method"
version = "0.1.0"
edition = "2021"
autotests = false
autobenches = false

[dependencies]
moyuan-core-microkernel = { path = "../../kernel/core_microkernel" }
moyuan-fs-service = { path = "../fs_service" }
moyuan-gui-service = { path = "../gui_service" }

[features]
default = []
