[package]
name = "moyuan-shell-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/main.rs"

[dependencies]
moyuan_libc = { path = "../../userland/libs/libc" }

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
