[package]
name = "moyuan-shell-service"
version = "0.1.0-alpha.1"
edition = "2021"
autotests = false
autobenches = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/main.rs"

[dependencies]
moyuan-libc = { path = "../../userland/libs/libc" }

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
