[package]
name = "moyuan-browser"
version = "0.1.0"
edition = "2021"
autotests = false
autobenches = false

[dependencies]
moyuan-core-microkernel = { path = "../../kernel/core_microkernel" }
moyuan-fs-service = { path = "../../services/fs_service" }
moyuan-gui-service = { path = "../../services/gui_service" }
moyuan-network-service = { path = "../../services/network_service" }

[features]
default = []
